# Translator-key-value

./: .gitignore  README.md  api_profiles.example.json  app.py  build_release.py  pyproject.toml
src/translator_tool/: __init__.py  json_mapper.py
