[project]
name = "translator-zh-en"
version = "0.1.0"
description = "Desktop JSON translation helper with safe extract/edit/write-back workflow."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6,<7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
